<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ca.tetchel.shexter.main.MainActivity">

    <item
        android:id="@+id/action_trustedhosts"
        android:orderInCategory="1"
        android:icon="@drawable/ic_action_trustedhosts"
        android:title="@string/trusted_hosts"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_eventlog"
        android:orderInCategory="50"
        android:icon="@drawable/ic_action_eventlog"
        android:title="@string/event_log"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="50"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />
</menu>
